--- a/WebCaseUI/Views/Home/Case.cshtml
+++ b/WebCaseUI/Views/Home/Case.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Case";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
