--- a/WebCaseUI/Views/Home/Case.cshtml
+++ b/WebCaseUI/Views/Home/Case.cshtml
@@ -1,17 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Case";
+    ViewBag.Title = "Add new Case";
 }
 <h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<form>
+    <div class="form-group">
+        <label for="caseNumber">Case number:</label>
+        <input type="text" class="form-control" id="caseNumber">
+    </div>
+    <div class="form-group">
+        <label for="kind">Kind:</label>
+        <input type="text" class="form-control" id="kind">
+    </div>
+    <div class="form-group">
+        <label for="customerNumber">Customer number:</label>
+        <input type="text" class="form-control" id="customerNumber">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+</form>
