--- a/WebCaseUI/Views/Shared/_Layout.cshtml
+++ b/WebCaseUI/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Case", "Case", "Home")</li>
+                    <li>@Html.ActionLink("Update", "Update", "Home")</li>
+
                 </ul>
             </div>
         </div>
