--- a/WebCaseUI/Views/Home/Update.cshtml
+++ b/WebCaseUI/Views/Home/Update.cshtml
@@ -3,9 +3,11 @@
 }
 <h2>@ViewBag.Title</h2>
 
-<form>
+@using (Html.BeginForm("Update", "Home", FormMethod.Post))
+{
+
     <div class="form-group">
-        <label for="caseId">Case id:</label>
+        <label for="id">Case id:</label>
         <input type="text" class="form-control" id="caseId">
     </div>
    
@@ -14,4 +16,5 @@
         <input type="file" class="form-control" id="attachment">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
-</form>
+
+}
