--- a/WebCaseUI/Views/Shared/_Layout.cshtml
+++ b/WebCaseUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Case", "Case", "Home")</li>
                     <li>@Html.ActionLink("Update", "Update", "Home")</li>
+                    <li>@Html.ActionLink("All", "All", "Home")</li>
+
 
                 </ul>
             </div>
