--- a/WebCaseUI/Views/Home/Update.cshtml
+++ b/WebCaseUI/Views/Home/Update.cshtml
@@ -8,12 +8,12 @@
 
     <div class="form-group">
         <label for="id">Case id:</label>
-        <input type="text" class="form-control" id="caseId">
+        <input type="text" class="form-control" id="id" name="id">
     </div>
    
     <div class="form-group">
         <label for="attachment">Attachment:</label>
-        <input type="file" class="form-control" id="attachment">
+        <input type="file" class="form-control" id="file" name="file">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 
