--- a/WebCaseUI/Views/Shared/_Layout.cshtml
+++ b/WebCaseUI/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Case", "Case", "Home")</li>
                     <li>@Html.ActionLink("Update", "Update", "Home")</li>
                     <li>@Html.ActionLink("All", "All", "Home")</li>
+                    <li>@Html.ActionLink("Get Case", "GetCaseById", "Home")</li>
 
 
                 </ul>
