--- a/WebCaseUI/Views/Home/Case.cshtml
+++ b/WebCaseUI/Views/Home/Case.cshtml
@@ -6,15 +6,18 @@
 <form>
     <div class="form-group">
         <label for="caseNumber">Case number:</label>
-        <input type="text" class="form-control" id="caseNumber">
+        <input type="text" class="form-control" id="caseNumber" required="required"
+>
     </div>
     <div class="form-group">
         <label for="kind">Kind:</label>
-        <input type="text" class="form-control" id="kind">
+        <input type="text" class="form-control" id="kind" required="required"
+>
     </div>
     <div class="form-group">
         <label for="customerNumber">Customer number:</label>
-        <input type="text" class="form-control" id="customerNumber">
+        <input type="text" class="form-control" id="customerNumber" required="required"
+>
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
