--- a/WebCaseUI/Views/Home/GetCaseById.cshtml
+++ b/WebCaseUI/Views/Home/GetCaseById.cshtml
@@ -6,7 +6,8 @@
 {
     <div class="form-group">
         <label for="id">Case id:</label>
-        <input type="number" class="form-control" id="id" name="id">
+        <input type="number" class="form-control" id="id" name="id" required="required"
+>
     </div>
 
 <button type="submit" class="btn btn-default">Submit</button>
