--- a/WebCaseUI/Views/Shared/_Layout.cshtml
+++ b/WebCaseUI/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Case", "Case", "Home")</li>
-                    <li>@Html.ActionLink("Update", "Update", "Home")</li>
-                    <li>@Html.ActionLink("All", "All", "Home")</li>
+                    <li>@Html.ActionLink("All Cases", "All", "Home")</li>
                     <li>@Html.ActionLink("Get Case", "GetCaseById", "Home")</li>
+                    <li>@Html.ActionLink("Add a case", "Case", "Home")</li>
+                    <li>@Html.ActionLink("Update a case", "Update", "Home")</li>
 
 
                 </ul>
