Show case added button

--- a/WebCaseUI/Views/Home/ShowCase.cshtml
+++ b/WebCaseUI/Views/Home/ShowCase.cshtml
@@ -38,5 +38,10 @@ else
 
 
 }
+<div class="form-group">
+    <input type="button" class="btn btn-info" value="Get case by id" onclick="location.href='@Url.Action("GetCaseById", "Home")'" />
+   </div> 
+    <div class="form-group">
 
-<input type="button" class="btn btn-info" value="Get another case" onclick="location.href='@Url.Action("GetCaseById", "Home")'" />
+    <input type="button" class="btn btn-info" value="Add case" onclick="location.href='@Url.Action("Case", "Home")'" />
+</div>
