--- a/WebCaseUI/Views/Home/Update.cshtml
+++ b/WebCaseUI/Views/Home/Update.cshtml
@@ -11,7 +11,15 @@
     <div class="form-group">
         <label for="id">Case name:</label>
        @* <input type="text" class="form-control" id="id" name="id" required="required">*@
-@Html.DropDownListFor(x => x.ID, new SelectList(ViewBag.Cases, "ID", "caseNumber"))    </div>
+    @if (ViewBag.Cases != null)
+    {
+        @Html.DropDownListFor(x => x.ID, new SelectList(ViewBag.Cases, "ID", "caseNumber"))
+    }
+    else
+    {
+        <input type="text" class="form-control" id="id" name="id" required="required">
+    }
+    </div>
    
     <div class="form-group">
         <label for="attachment">Attachment:</label>
